# flatpak-predefined-repos

./: Makefile.am  bootstrap  configure.ac
